--- a/.github/workflows/myWorkflow.yaml
+++ b/.github/workflows/myWorkflow.yaml
@@ -24,6 +24,20 @@ jobs:
       INSTANCE_NAME: ${{ secrets.INSTANCE_VARIABLE }}
     with:
       service: "plucky-earthquake" 
+    
+
+  - name: Notify Slack
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          text: |
+            Name: XU CONG
+            Matriculation Number: 123
+            Email: 123@sg
+            Repository: ${{ github.repository }}
+            Deployment URL: ${{ secrets.RAILWAY_APP_URL }}
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_TEST_WEBHOOK_URL }}
       
     
 
