--- a/.github/workflows/myWorkflow.yaml
+++ b/.github/workflows/myWorkflow.yaml
@@ -27,17 +27,35 @@ jobs:
     
 
   - name: Notify Slack
-        uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          text: |
-            Name: XU CONG
-            Matriculation Number: 123
-            Email: 123@sg
-            Repository: ${{ github.repository }}
-            Deployment URL: ${{ secrets.RAILWAY_APP_URL }}
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_TEST_WEBHOOK_URL }}
+    uses: 8398a7/action-slack@v3
+    with:
+    status: ${{ job.status }}
+    blocks: |
+      [
+        {
+          "type": "section",
+          "text": {
+            "type": "mrkdwn",
+            "text": "*Name:* XU CONG\n*Matriculation Number:* 123\n*Email:* 123@sg\n*Repository:* ${{ github.repository }}\n*Deployment URL:* ${{ secrets.RAILWAY_APP_URL }}"
+          }
+        },
+        {
+          "type": "actions",
+          "elements": [
+            {
+              "type": "button",
+              "text": {
+                "type": "plain_text",
+                "text": "Go"
+              },
+              "url": "${{ secrets.RAILWAY_APP_URL }}"
+            }
+          ]
+        }
+      ]
+  env:
+    SLACK_WEBHOOK_URL: ${{ secrets.SLACK_TEST_WEBHOOK_URL }}
+ 
       
     
 
