--- a/.github/workflows/myWorkflow.yaml
+++ b/.github/workflows/myWorkflow.yaml
@@ -30,29 +30,24 @@ jobs:
     uses: 8398a7/action-slack@v3
     with:
       status: ${{ job.status }}
-      blocks: |
-        [
-          {
-            "type": "section",
-            "text": {
-              "type": "mrkdwn",
-              "text": "*Name:* XU CONG\n*Matriculation Number:* 123\n*Email:* 123@sg\n*Repository:* ${{ github.repository }}\n*Deployment URL:* ${{ secrets.RAILWAY_APP_URL }}"
-            }
-          },
-          {
-            "type": "actions",
-            "elements": [
-              {
-                "type": "button",
-                "text": {
-                  "type": "plain_text",
-                  "text": "Go"
-                },
-                "url": "${{ secrets.RAILWAY_APP_URL }}"
+      custom_payload: |
+        'blocks: 
+          [
+            {
+              "type": "section",
+              "text": {
+                "type": "mrkdwn",
+                "text": "*Name:* XU CONG\n*Matriculation Number:* 123\n*Email:* 123@sg\n*Repository:* ${{ github.repository }}\n*Deployment URL:* ${{ secrets.RAILWAY_APP_URL }}"
               }
-            ]
-          }
-        ]
+            },
+            {
+              "type": "section",
+              "text": {
+                "type": "mrkdwn",
+                "text": "${{ secrets.RAILWAY_APP_URL }}"
+              }
+            }
+          ]'
     env:
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_TEST_WEBHOOK_URL }}
   
