--- a/.github/workflows/myWorkflow.yaml
+++ b/.github/workflows/myWorkflow.yaml
@@ -10,6 +10,7 @@ jobs:
   runs-on: ubuntu-latest
   env:
       RAILWAY_APP_URL_VAR: ${{ secrets.RAILWAY_APP_URL }}
+      SLACK_URL: ${{ secrets.SLACK_TEST_WEBHOOK_URL }}
   steps:
 
   - name: Print RAILWAY_APP_URL_VAR variable
@@ -47,7 +48,7 @@ jobs:
               "type": "section",
               "text": {
                 "type": "mrkdwn",
-                "text": "${{ secrets.RAILWAY_APP_URL }}"
+                "text": "${RAILWAY_APP_URL_VAR}"
               },
               "accessory": {
                 "type": "button",
@@ -55,13 +56,13 @@ jobs:
                   "type": "plain_text",
                   "text": "Go"
                 },
-                "url": "${{ env.RAILWAY_APP_URL_VAR }}"
+                "url": "${RAILWAY_APP_URL_VAR}"
               }
             }
           ]
         }
     env:
-      SLACK_WEBHOOK_URL: "www.google.com"
+      SLACK_WEBHOOK_URL: "${SLACK_URL}"
 
  
       
