--- a/.github/workflows/myWorkflow.yaml
+++ b/.github/workflows/myWorkflow.yaml
@@ -34,6 +34,7 @@ jobs:
     with:
       payload: |
         {
+          "text": "test",
           "blocks": [
             {
               "type": "section",
