--- a/.github/workflows/myWorkflow.yaml
+++ b/.github/workflows/myWorkflow.yaml
@@ -48,7 +48,7 @@ jobs:
               "fields": [
                 {
                   "type": "mrkdwn",
-                  "text": "*Name:*test"
+                  "text": "*Name:* test"
                 },
                 {
                   "type": "mrkdwn",
@@ -61,7 +61,7 @@ jobs:
               "fields": [
                 {
                   "type": "mrkdwn",
-                  "text": "*Matriculation:*test"
+                  "text": "*Matriculation:* test"
                 },
                 {
                   "type": "mrkdwn",
@@ -88,6 +88,7 @@ jobs:
         }
     env: 
       SLACK_WEBHOOK_URL: "${{ secrets.SLACK_TEST_WEBHOOK_URL }}"
+      SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 
  
       
