--- a/.github/workflows/myWorkflow.yaml
+++ b/.github/workflows/myWorkflow.yaml
@@ -12,7 +12,7 @@ jobs:
   
   steps:
 
-  - name: Print RAILWAY_APP_URL_VAR variable
+  - name: Print INSTANCE_VARIABLE_VAR variable
     run: echo ${{ vars.INSTANCE_VARIABLE_VAR }}
 
   - name: checkout  
