--- a/.github/workflows/myWorkflow.yaml
+++ b/.github/workflows/myWorkflow.yaml
@@ -86,7 +86,7 @@ jobs:
           ]
         }
     env: 
-      SLACK_WEBHOOK_URL: "${{ secrets.SLACK_TEST_WEBHOOK_URL }}"
+      SLACK_WEBHOOK_URL: "${{ secrets.SLACK_SUBMIT_WEBHOOK_URL }}"
       SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 
  
