--- a/.github/workflows/myWorkflow.yaml
+++ b/.github/workflows/myWorkflow.yaml
@@ -13,7 +13,7 @@ jobs:
   steps:
 
 
-  - name: Checkout_go  
+  - name: Checkout_Go  
     uses: actions/checkout@v3
 
   - name: Deploy to Railway
